Manual bisecting to find a bug causing issue on ios

--- a/src/sass/heading.scss
+++ b/src/sass/heading.scss
@@ -7,7 +7,7 @@
     width: 15vh;
     height: auto;
     max-height: 4vh;
-    display: flex;
+    display: block;
     margin: 0 auto;
   }
 
